--- a/client/src/components/modules/DashBoard.module.css
+++ b/client/src/components/modules/DashBoard.module.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding-bottom: 50px;
   }
   
   .title {
@@ -11,7 +12,7 @@
   }
   
   .image {
-    margin-top: 40px;
+    margin-top: 20px;
     max-width: 100%;
   }
   
